# tax-graph-rag

./: .gitignore  LICENSE  README.md  STATUS.md  TODO.md  main.py  pyproject.toml  requirements.txt
data/ground_truth/: eval.jsonl  split.json
docs/: building-eval-dataset.md  research-log.md
docs/decisions/: 0001-article-identity-and-dedup.md  0002-held-out-test-split.md  0003-defer-ocr-fix.md  0004-credentials-in-env.md  0005-matched-retrieval-depth.md  0006-article-id-collisions.md  README.md
notebooks/: processed_articles.ipynb  test_chroma_retrieval.ipynb
scripts/: graph_stats.py  make_split.py  migrate_dedup_text.py  normalise_dry_run.py  parse_funnel.py  prototype_dedup.py  reset_stores.py  tune_alpha.py  validate_ground_truth.py
src/: config.py  corpus.py  generation.py  hybrid_search.py  llm_client.py  seeding.py  vector_search.py
src/baseline_rag/: ingestion.py  pipeline.py  retriever.py
src/data_acquisition/: jdih_scraper.py  ortax_scraper.py  parser.py
src/evaluation/: __init__.py  __main__.py  dataset.py  ir_metrics.py  ragas_metrics.py  report.py  runner.py  stats.py  verify.py
src/graph_rag/: ingestion.py  pipeline.py  retriever.py
tests/: test_corpus.py  test_ir_metrics.py
